--- a/src/app/component/allorders/allorders.component.html
+++ b/src/app/component/allorders/allorders.component.html
@@ -2,6 +2,8 @@
 
     <div class="w-75  m-auto">
 
+        <div class=" text-center"><h3 class="text-main fw-bold py-3">AllOrders</h3></div>
+
         <div *ngFor="let orders of AllOrders " class="row px-5 py-5 mb-3 border border-4">
 
             <div class="col-12">
